--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "dereck-redis",
-  "version": "0.0.2",
+  "name": "derecks-redis",
+  "version": "0.0.3",
   "main": "index.js",
-  "repository": "git@github.com:dereckmezquita/dereck-redis.git",
+  "repository": "git@github.com:derecksprojects/derecks-redis.git",
   "author": "dereckmezquita <dereck@mezquita.io>",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "format": "prettier --write .",
     "envs": "export DOCKER_EXPOSE_PORT=6379;",
     "docker-run:dev": "yarn run envs docker-compose -f docker-compose.yml up -d",
