master: Redis password protected now.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,14 @@ services:
     container_name: linode_dereck-redis
     volumes:
       - redis-data:/data
-    ports:
-      - 6379:6379
+    command:
+      [
+        'redis-server',
+        '--requirepass',
+        '${REDIS_PASSWORD}',
+        '--appendonly',
+        'yes'
+      ]
     networks:
       - dereck-network
 
