--- a/.github/workflows/release_prod.yml
+++ b/.github/workflows/release_prod.yml
@@ -10,14 +10,18 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: Copy docker-compose.yml to Linode
+      - name: Create .env file
+        run: |
+          echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" > .env
+
+      - name: Copy files to Linode
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USERNAME }}
           password: ${{ secrets.REMOTE_PASSWORD }}
           port: ${{ secrets.REMOTE_PORT }}
-          source: './docker-compose.yml'
+          source: './docker-compose.yml, .env'
           target: '/root/docker-compose-redis/'
 
       - name: Execute remote Docker Compose command
@@ -29,9 +33,8 @@ jobs:
           port: ${{ secrets.REMOTE_PORT }}
           script: |
             cd /root/docker-compose-redis/
-            docker compose -f docker-compose.yml pull
-            docker compose -f docker-compose.yml down
+            docker compose --env-file .env pull
+            docker compose --env-file .env down
             docker container prune -f
             docker image prune -f
-            docker volume prune -f
-            docker compose -f docker-compose.yml up -d
+            docker compose --env-file .env up -d
