--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
         '--requirepass',
         '${REDIS_PASSWORD}',
         '--appendonly',
-        'yes'
+        'yes',
+        '--bind',
+        '0.0.0.0'
       ]
     networks:
       - dereck-network
